# skr

./: .gitignore  Cargo.toml  README.md  build  build.sh  config.go  config.h  config.hcl  definitions.h  fnskr.h  go.mod  go.sum  install.sh  key  keyTest  keyTest.c  llkr.c  main.c  main.go  main_integration_test.go  main_remap_test.go  main_unit_test.go  new.go  prot  remap.h  run  runTest  skr  skrcore  sudo  test  test.c  test.py  testProfile.tmp  testrun.sum  x2y  x2y.c
docs/: exampleConfig.txt  explain.md  genDocs.sh  keyCodes.md
docs/tests/: mtf.h  test  test.c
keyboard/: functions.go  io.go  keyboard_test.go  keycodesFunctions.go
parser/: parser.py  remapData.py
pkg/aur/: .SRCINFO
src/: actions.rs  arrayFunctions.h  config.go  config.h  config.rs  decide.go  definitions.go  definitions.h  execute.go  fileParcer.c  fnskr.h  go.mod  innit.rs  keyboardIO.go  keyboard_io.rs  keycodes.go  keycodesFunctions.go  layers.go  list_functions.go  main.c  main.go  main.rs  mainFunctions.h  main_integration_test.go  main_remap_no_if_notest.go  main_test.go  main_unit_test.go  new.go  nodes.rs  parser.go  parser.h  rawkeyboard.go  skr.config  test.rs  test_helpers.rs  test_profile  util.go
src/config/: config.go
src/core/: arrayFunctions.h  definitions.h  main.c  mainFunctions.h  parser.h
src/keyboard/: actionFunctions.go  definitions.go  io.go  keyboardFunctions.go  keycodes.go  loop.go  triggerConditions.go
src/kid/: skrkid.c
src/logg/: log.go
src/parser/: parser.py  parserClasses.py  remapData.py  test.py
src/tests/: common.rs  layers.rs  mod.rs  (+1 more)
